# mindmap-app

./: .gitignore  .lintstagedrc.json  LICENSE  README.md  findings.md  index.html  package-lock.json  package.json  progress.md  task_plan.md  tsconfig.json  vitest.config.ts
.githooks/: pre-commit
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
docs/: debugging-notes.md  llm-guidelines.md  mcp-architecture.md  mcp-dev-plan.md  mcp-feature-coverage.yaml  mcp-flow-coverage.yaml  mcp-overview.md  mcp-quickstart.md  meta-rules.md  testing-methodology.md  troubleshooting.md
icon-candidates/: final-icon.html  index.html
scripts/: check-coverage.cjs  precheck.sh  verify-mcp-live.sh
src/: App.css  App.mcp-canvas-lock.test.tsx  App.tsx  main.tsx  store.test.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  dev_logger.rs  error.rs  freemind.rs  lib.rs  main.rs  markdown.rs  mmap.rs  models.rs  opml.rs  reminder_scheduler.rs  state.rs
src-tauri/src/mcp/: audit_log.rs  data_source.rs  editor_mode.rs  event_emitter.rs  mod.rs  prompts.rs  protocol.rs  server.rs  session.rs  tauri_source.rs  tools_readonly.rs  tools_session.rs  tools_write.rs
src-tauri/tests/: integration.rs
src/components/: Common.css  HourglassIcon.tsx  LlmOperationHistory.css  LlmOperationHistory.test.tsx  LlmOperationHistory.tsx  LlmSessionBanner.css  LlmSessionBanner.test.tsx  LlmSessionBanner.tsx  MindMapCanvas.css  MindMapCanvas.tsx  PreferencesModal.css  PreferencesModal.mcp-tab.test.tsx  PreferencesModal.test.tsx  PreferencesModal.tsx  ReminderToast.css  ReminderToast.test.tsx  ReminderToast.tsx  Sidebar.css  Sidebar.test.tsx  Sidebar.tsx  StatusBar.css  StatusBar.test.tsx  StatusBar.tsx  TabOutline.test.tsx  TabOutline.tsx  TabProperties.test.tsx  TabProperties.tsx  TabReminders.css  TabReminders.tsx  TabStyle.tsx  Toolbar.css  Toolbar.test.tsx  Toolbar.tsx
src/hooks/: useAutoSave.test.ts  useAutoSave.ts  usePngExport.test.ts  usePngExport.ts  useWindowState.test.ts  useWindowState.ts
src/mcp/: mcpBridge.ts  operationBridge.test.ts  operationBridge.ts
src/test/: helpers.ts  setup.ts
src/utils/: devLogger.test.ts  devLogger.ts  imageEmbed.test.ts  imageEmbed.ts  mindElixirAdapter.test.ts  mindElixirAdapter.ts  nodeActions.ts  (+3 more)
tests/: coverage.md
(+5 files in other folders)
